# xu-ai-news-rag

./: .gitignore  README.md  database.sql
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/src/backend/: app.py  config.py  models.py
backend/src/backend/auth/: routes.py
backend/src/backend/routes/: main.py
backend/src/backend/services/: aggregation.py  clustering.py  custom_cross_encoder.py  custom_llm.py  feeds.py  knowledge_base.py  notification.py  search.py
backend/tests/: conftest.py  test_aggregation.py  test_auth.py  test_clustering.py  test_documents.py  test_feeds.py  test_reports.py  test_search.py
backend/tests/testdata/: rss.xml
docs/: High_Level_Design.md  PRD.md  Prototype_Design.md  Technical_Architecture.md  uv.md
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.test.js
frontend/src/components/: NavigationBar.js
frontend/src/pages/: DashboardPage.js  DashboardPage.test.js  HomePage.js  LoginPage.js  LoginPage.test.js  RegisterPage.js
frontend/src/services/: api.js
